tests/spirits/errors/empty_exegesis.dol
// Test: Empty exegesis block
// Expected: Should warn - exegesis should not be empty

pub gene EmptyExegesis {
    has id: UInt64
}

exegesis {
}
